Make "statements before super()" support a preview feature.
Thanks to Jim Laskey for help with preview logic.