@@ -3,7 +3,7 @@
  * @bug 8194743
  * @summary Permit additional statements before this/super in constructors
  *
- * @compile/fail/ref=SuperInitFails.out -XDrawDiagnostics SuperInitFails.java
+ * @compile/fail/ref=SuperInitFails.out -XDrawDiagnostics --enable-preview -source ${jdk.version} SuperInitFails.java
  */
 import java.util.concurrent.atomic.AtomicReference;
 public class SuperInitFails extends AtomicReference<Object> implements Iterable<Object> {
